--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -34,7 +34,7 @@ $black-color: #000000 !default;
 
 // Theme colors
 
-$code-bg-color-light: #ececec;
+$code-bg-color-light: #ededed;
 $code-bg-color-dark: #3d3d3d !default;
 
 // Font awesome location
