update hyperlink, add symbol to blockquotes, and change the ref text color

--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -24,10 +24,10 @@
   --global-newsletter-bg-color: #{$white-color};
   --global-newsletter-text-color: #{$black-color};
 
-  --global-tip-block: #42b983;
+  --global-tip-block: #3bb07b;
   --global-tip-block-bg: #e2f5ec;
   --global-tip-block-text: #215d42;
-  --global-tip-block-title: #42b983;
+  --global-tip-block-title: #3bb07b;
   --global-tip-block-hover: #c7e6d8;
   --global-warning-block: #bd872a;
   --global-warning-block-bg: #fff8d8;
