--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -5,7 +5,7 @@ layout: default
 {% assign tags = page.tags | join: '' %}
 {% assign categories = page.categories | join: '' %}
 
-{% if page._styles %}
+  {% if page._styles %}
   <!-- Page/Post style -->
   <style type="text/css">
     {{ page._styles }}
@@ -14,12 +14,14 @@ layout: default
 
 {% assign url_beginning = page.url | slice: 0, 6 %}
 
-<div class="post">
+  <div class="post">
   {% include breadcrumbs.liquid %}
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-meta">
-      <span class="word-count" style="color: #8e8e8e;"><i class="fa-solid fa-align-left fa-sm"></i> {{ content | number_of_words }} words</span>
+      <span class="word-count" style="color: #8e8e8e;">
+        <i class="fa-solid fa-align-left fa-sm"></i>
+        {{ content | number_of_words }} words</span>
       <br>
       Created in {{ page.date | date: '%B %d, %Y' }}
       {% if page.author %}by {{ page.author }}{% endif %}
@@ -28,17 +30,24 @@ layout: default
     </p>
     <p class="post-tags">
       {% if url_beginning == '/blog/' %}
-        <a href="{{ year | prepend: '/blog/' | prepend: site.baseurl}}"> <i class="fa-solid fa-calendar fa-sm"></i> {{ year }} </a>
+        <a href="{{ year | prepend: '/blog/' | prepend: site.baseurl}}">
+          <i class="fa-solid fa-calendar fa-sm"></i>
+          {{ year }}
+        </a>
       {% else %}
-        <i class="fa-solid fa-calendar fa-sm"></i> {{ year }}
+        <i class="fa-solid fa-calendar fa-sm"></i>
+        {{ year }}
       {% endif %}
       {% if tags != '' %}
         &nbsp; &middot; &nbsp;
         {% for tag in page.tags %}
           {% if url_beginning == '/blog/' %}
-            <a href="{{ tag | slugify | prepend: '/blog/tag/' | prepend: site.baseurl}}"> <i class="fa-solid fa-hashtag fa-sm"></i> {{ tag }}</a>
+            <a href="{{ tag | slugify | prepend: '/blog/tag/' | prepend: site.baseurl}}">
+              <i class="fa-solid fa-hashtag fa-sm"></i>
+              {{ tag }}</a>
           {% else %}
-            <i class="fa-solid fa-hashtag fa-sm"></i> {{ tag }}
+            <i class="fa-solid fa-hashtag fa-sm"></i>
+            {{ tag }}
           {% endif %}
           {% unless forloop.last %}
             &nbsp;
@@ -51,10 +60,12 @@ layout: default
         {% for category in page.categories %}
           {% if url_beginning == '/blog/' %}
             <a href="{{ category | slugify | prepend: '/blog/category/' | prepend: site.baseurl}}">
-              <i class="fa-solid fa-tag fa-sm"></i> {{ category -}}
+              <i class="fa-solid fa-tag fa-sm"></i>
+              {{ category -}}
             </a>
           {% else %}
-            <i class="fa-solid fa-tag fa-sm"></i> {{ category }}
+            <i class="fa-solid fa-tag fa-sm"></i>
+            {{ category }}
           {% endif %}
           {% unless forloop.last %}
             &nbsp;
@@ -133,4 +144,19 @@ layout: default
       </a>
     {% endunless %}
   </div>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      const content = document.getElementById('markdown-content');
+      if (content) {
+        const links = content.getElementsByTagName('a');
+        for (const link of links) {
+          if (link.hostname !== window.location.hostname) {
+            link.target = '_blank';
+            link.rel = 'noopener';
+          }
+        }
+      }
+    });
+  </script>
 </div>
