--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -3,14 +3,10 @@
   <nav
     id="navbar"
     class="navbar navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}"
-    role="navigation"
-  >
+    role="navigation">
     <div class="container">
       {% if page.permalink != '/' %}
         <a class="navbar-brand title font-weight-lighter nav-title" href="{{ site.baseurl }}/">
-          <span class="nav-title-symbol">
-            <i class="fa-solid fa-terminal"></i>
-          </span>
           {% if site.title == 'blank' %}
             {% if site.first_name %}
               <span class="font-weight-bold text-uppercase">
@@ -45,8 +41,7 @@
         data-target="#navbarNav"
         aria-controls="navbarNav"
         aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+        aria-label="Toggle navigation">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar top-bar"></span>
         <span class="icon-bar middle-bar"></span>
@@ -69,7 +64,7 @@
                 <span class="sr-only">(current)</span>
               {% endif %}
             </a>
-          </li>
+        </li>
 
           <!-- Other pages -->
           {% assign sorted_pages = site.pages | sort: 'nav_order' %}
@@ -90,8 +85,7 @@
                     role="button"
                     data-toggle="dropdown"
                     aria-haspopup="true"
-                    aria-expanded="false"
-                  >
+                    aria-expanded="false">
                     {{- p.title }}
                     {% if page.title == p.title or has_active_child %}
                       <span class="sr-only">(current)</span>
@@ -133,11 +127,11 @@
               <button
                 id="search-toggle"
                 title="Search"
-                onclick="openSearchModal()"
-              >
+                onclick="openSearchModal()">
                 <span class="nav-link search-nav-item">
                   <span class="shortcut-key" style="letter-spacing: 1px;">
-                    <span style="color: #f39304">[ </span>⌘K
+                    <span style="color: #f39304">[
+                    </span>⌘K
                     <i class="ti ti-search"></i>
                     <span style="color: #f39304">]</span>
                   </span>
